tests/paczka1/small_fuzzy/47888466.err
Error in line 1: lex A970 69,1
Error in line 10: 8h1olRRsxG6 A254 24,2
